# pyet-mc

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  flake.nix  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  CI_deploy.yml  CI_test.yml  CI_test_deploy.yml  Docs_deploy.yml  deploy.yml
cif_files/: KY3F10_mp-2943_conventional_standard.cif
docs/: book.toml
docs/.github/workflows/: deploy.yml
docs/src/: README.md  SUMMARY.md
docs/src/fitting/: fitting.md  fitting_algorithms.md  general_fitting.md  traces.md  weighted_fitting.md
docs/src/information/: License.md  references.md  referencing.md  rust_bindings.md  troubleshooting.md
docs/src/introduction/: installation.md  overview.md  road_map.md
docs/src/plotting/: configuration.md  plot_types.md  plotting.md  saving.md  spectra.md  structure.md  transient.md
docs/src/structures/: adding_interaction_models.md  caching.md  energy_transfer_models.md  modelling_energy_transfer.md  structure_creation_and_plotting.md
examples/: KY3F10.cif  testing_pyet.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: requirements.txt  structure_calc.py
src/PYET/: __init__.py  benchmark.py  fitmc.py  helper_funcs.py  structure_calc.py
src/cif_files/: KY3F10.cif
src/config/: plotting_config.toml
src/pyet/: __init__.py  fitmc.py  fitting.py  helper_funcs.py  plotting.py  pyet_utils.py  structure.py  structure_calc.py
src/pyet/plotting_config/: plotting_config.toml
src/pyet_mc/: __init__.py  fitting.py  plotting.py  pyet_utils.py  structure.py
src/pyet_mc/cache/: singlecross_10_2pt5_DQ_1000_intrinsic_False_20240827095031.json  singlecross_10_5pt0_DQ_1000_intrinsic_False_20240827080449.json
src/pyet_mc/plotting_config/: ion_colours.csv  plotting_config.toml
src/pyet_namechange_temp/: __init__.py
src/pyet_namechange_temp/cache/: singlecross_10_5_DQ_50.json
tests/: conftest.py  test_fitting.py  test_init.py  test_structure.py  test_utils.py  test_validation.py
