[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyet_mc"
dependencies = [
    "numpy>=1.25.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "pymatgen>=2024.1.27",
    "scipy>=1.11.0",
    "toml>=0.10.2",
    "pywebview>=4.4.0",
    "kaleido>=0.2.0",
]

requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    {name = "Jamin Martin", email = "jamin.martin@pg.canterbury.ac.nz"},
  
]
maintainers = [ 
    {name = "Jamin Martin", email = "jamin.martin@pg.canterbury.ac.nz"}
]
description = "Python package for calculating energy transfer rates between lanthanide ions"
readme = "README.md"
license = {file = "LICENSE"}

version = "0.3.0"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyet_mc._pyet_mc"

[project.urls]
Homepage = "https://github.com/JaminMartin/pyet-mc"
Documentation = "https://jaminmartin.github.io/pyet-mc/"
Repository = "https://github.com/JaminMartin/pyet-mc"
