[package]
name = "pyet_rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyet_rs"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.10.0"